--- a/css/common.css
+++ b/css/common.css
@@ -864,8 +864,15 @@ form .field:after { content: ""; display: table; clear: both; }
 
 .notice-info { margin-left: 20px; margin-top: 15px; font-size: 18px; }
 .notice-info .show-map-link { font-weight: bold; }
-.notice-post-title:focus,.show-map-link:hover,.show-map-link:focus,.show-map-link:active{
+.notice-post-title a:focus,.notice-post-title a:hover,.show-map-link:hover,.show-map-link:focus,.show-map-link:active{
 	color:#D4762D;
+}
+.notice-post-title a{
+	overflow: hidden; 
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	width: 55%;
+    display: inline-block;
 }
 .notice-info-el { margin-top: 3px; }
 .notice-info .notice-id:before { content: "|"; display: inline-block; margin-right: 10px; margin-left: 7px; font-size: 20px; line-height: 20px; }
