--- a/css/common.css
+++ b/css/common.css
@@ -526,7 +526,7 @@ body { min-width: 1020px;}
 .top-post-btn { float: right; margin-top: 10px; margin-bottom: -10px; margin-right:3px; height: 60px; font-size: 20px;
 	color:#583d8b;vertical-align: top; -webkit-transition: all 0.2s; transition: all 0.2s; *zoom: 1; font-family: 'segoe-script';}
 .top-post-btn:after { content: ""; display: table; clear: both; }
-.top-post-btn:hover { color: #d4762d; -webkit-transition: all 0.2s; transition: all 0.2s; text-decoration: none;}
+.top-post-btn:hover,.top-post-btn:focus { color: #d4762d; -webkit-transition: all 0.2s; transition: all 0.2s; text-decoration: none;}
 .top-post-btn .icon-all-arrow-left { float: left; margin-top: 10px; margin-right: 5px; }
 
 .section-new { margin-top: 40px; *zoom: 1; max-width: 1086px;}
@@ -883,7 +883,7 @@ form .field:after { content: ""; display: table; clear: both; }
 .actions-list li + li { margin-left: 15px; }
 .actions-list li a { display: block; padding: 8px 10px; box-shadow: 0 0 3px rgba(1, 1, 1, 0.3);  }
 .actions-list li a .icon-star-sm { display: inline-block; margin-right: 5px; width: 14px; height: 13px; line-height: 20px; background: url("../img/other/star-sm.png") no-repeat center center; }
-.actions-list li a:hover { box-shadow: 0 0 5px 1px #d4762d;  color:#583d8b;}
+.actions-list li a:hover,.actions-list li a:focus { box-shadow: 0 0 5px 1px #d4762d;  color:#583d8b;}
 
 .notice-photo { margin-top: 20px; padding: 10px; min-height: 120px; text-align: center; box-shadow: 0 0 3px rgba(1, 1, 1, 0.3); }
 .notice-photo-empty { display: none; font-size: 24px; line-height: 120px; text-decoration: underline; color: #ccc; }
@@ -929,6 +929,10 @@ form .field:after { content: ""; display: table; clear: both; }
 .pagination-sm .prev-btn:before { content: "<"; display: inline-block; margin-right: 5px; }
 .pagination-sm .next-btn { float: right; }
 .pagination-sm .next-btn:after { content: ">"; display: inline-block; margin-left: 5px; }
+.pagination-sm .next-btn:hover,.pagination-sm .next-btn:focus,.pagination-sm .prev-btn:hover,.pagination-sm .prev-btn:focus{
+	color:#d4762d;
+}
+
 
 .author-contacts { margin-top: 35px; padding-left: 20px; padding-top: 15px; border-top: 1px solid #9980c7; }
 .author-contacts .title-sm { margin: 0; float: left; line-height: 45px; }
@@ -1878,7 +1882,7 @@ input.photoload-item:active,input.photoload-item:focus{border:0; outline: 0; }
 .post-preview b{text-align: center;display: block;}
 .post-preview button, .post-preview input[type="submit"]{height: 30px; padding: 0 30px; background: #D4762E; color:white;     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 16px;margin-left: 7%; margin-top: 50px; transition:0.3s all;}
 .post-preview button:hover, .post-preview input:hover{background: #675096;}
-.notice-el .submit-btn:hover,.author-contacts .submit-btn:hover{text-decoration: none; color:white;}
+.notice-el .submit-btn:hover,.notice-el .submit-btn:focus,.author-contacts .submit-btn:hover,.author-contacts .submit-btn:focus{text-decoration: none; color:white;}
 
 
 .mtop-0 {margin-top:0 !important;}
