--- a/css/common.css
+++ b/css/common.css
@@ -902,7 +902,7 @@ form .field:after { content: ""; display: table; clear: both; }
 
 .title-sm { margin-top: 30px; margin-bottom: 10px; margin-left: 20px; font-size: 18px; line-height: 20px; color: #d4762d; text-transform: uppercase; font-weight: bold; }
 
-.notice-desc { margin-left: 20px; margin-right: 20px; font-size: 18px; line-height: 22px; word-break: break-all;}
+.notice-desc { margin-left: 20px; margin-right: 20px; font-size: 18px; line-height: 22px; word-break: normal;}
 
 .notice-slider-in { padding: 5px; width: 130px; height: 130px; }
 .notice-slider-in .img-wrapper { display: inline-block; padding: 5px; width: 120px; height: 120px; line-height: 105px; vertical-align: middle; text-align: center; background-color: #fff;  box-shadow: 0 0 3px rgba(1, 1, 1, 0.3); }
@@ -2921,4 +2921,39 @@ li.multifilters-in.multifilters-checkbox.one-checkbox .nav-menu li label i{
   	max-height: 65px;
   	max-width: 65px;
   	display: inline-block;
+  }
+
+  /**profile-items**/
+  .profile-items{
+  	background: #f1f0f0;
+  	border-top: 1px solid #9d8dbb;
+  	border-bottom: 1px solid #9d8dbb;
+  	height: 55px;
+  	width: 100%;	
+  }
+  .profile-icon{
+  	margin: 0px 15px 5px 15px;
+ 	display: inline-block;
+ 	position: relative;
+ 	bottom: 7px;
+  }
+  .profile-icon img{
+ 	max-height: 30px;
+ 	max-width: 30px;
+  }
+  .profile-info{
+  	display: inline-block;
+  	position: relative;
+  	top: 4px;
+  }
+  .profile-info p{
+  	margin: 0;
+  }
+  .profile-info a:hover{
+  	color: #d4762d;
+  }
+  .profile-data{
+  	float: right;
+	margin-right: 15px;
+  	line-height: 55px;
   }
