--- a/css/common.css
+++ b/css/common.css
@@ -40,7 +40,7 @@ a { color: inherit; }
 
 .slick-slider .slick-list, .slick-track, .slick-slide, .slick-slide img { -webkit-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 
-.slick-track { position: relative; left: 0; top: 0; display: block; zoom: 1; }
+.slick-track { position: relative; left: 0; top: 0; display: block; zoom: 1; min-width: 100%; }
 .slick-track:before, .slick-track:after { content: ""; display: table; }
 .slick-track:after { clear: both; }
 .slick-loading .slick-track { visibility: hidden; }
