--- a/css/common.css
+++ b/css/common.css
@@ -820,8 +820,9 @@ form .field:after { content: ""; display: table; clear: both; }
 .msg-status:after { content: ""; display: table; clear: both; }
 .msg-status li { float: left; padding-right: 10px; font-size: 18px; line-height: 1.1; }
 .msg-status li + li { padding-left: 10px; border-left: 1px solid #583d8b; }
-.msg-status li.is-active { color: #d4762d; }
-.msg-status a:hover, .msg-status a:focus{color:#583d8b;}
+.msg-status li.is-active,.msg-status a:focus { color: #d4762d; }
+.msg-status a:hover{color:#583d8b;}
+
 .search-msg, .search-payment { float: right; }
 .search-msg .field, .search-payment .field { position: relative; left: 30px; float: left; }
 .search-msg .field + .field, .search-payment .field + .field { left: 0; }
@@ -898,7 +899,7 @@ form .field:after { content: ""; display: table; clear: both; }
 .notice-desc-list { margin-top: 10px; padding: 0 0 0 20px; *zoom: 1; }
 .notice-desc-list:after { content: ""; display: table; clear: both; }
 .notice-desc-list .notice-desc-el { float: left; margin-top: 10px; padding-right: 20px; width: 50%; }
-.notice-desc-list .notice-desc-el a:hover { text-decoration: underline; }
+.notice-desc-list .notice-desc-el a:hover { text-decoration: underline;  color: #d4762d;}
 
 .title-sm { margin-top: 30px; margin-bottom: 10px; margin-left: 20px; font-size: 18px; line-height: 20px; color: #d4762d; text-transform: uppercase; font-weight: bold; }
 
